# QuixiCore-Metal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  basert-parity.md  bigpicture.md  discrepencies.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.quixicore/: backend.yaml  kernels.yaml  quant-formats.yaml
Configs/: Debug.xcconfig  Release.xcconfig
QuixiCoreMetal.xcodeproj/: project.pbxproj
QuixiCoreMetal.xcodeproj/xcshareddata/xcschemes/: QuixiCoreMetal.xcscheme
ThunderMittens.xcodeproj/: project.pbxproj
ThunderMittens/include/common/: atomics.metal  base_ops.metal  glu_eval.metal  rng.metal
ThunderMittens/kernels/: CMakeLists.txt  bindings.cpp  setup.cfg  time_layernorm.py  tk_launch.h  tk_mlx_launch.h
ThunderMittens/kernels/act_quant/: act_quant.h  act_quant.metal
ThunderMittens/kernels/add_norm/: add_norm.cpp  add_norm.h  add_norm.metal
ThunderMittens/kernels/add_rt/: add_rt.cpp  add_rt.metal
ThunderMittens/kernels/attn_bwd/: attn_bwd.h  attn_bwd.metal
ThunderMittens/kernels/attn_causal/: attn_causal.cpp  attn_causal.h  attn_causal.metal
ThunderMittens/kernels/attn_fwd/: attn_fwd.cpp
ThunderMittens/kernels/attn_q/: attn_q.h  attn_q.metal
ThunderMittens/kernels/attn_varlen/: attn_varlen.cpp  attn_varlen.h  attn_varlen.metal
ThunderMittens/kernels/cross_entropy/: cross_entropy.cpp  cross_entropy.h  cross_entropy.metal
ThunderMittens/kernels/dropout/: dropout.h  dropout.metal
ThunderMittens/kernels/embedding/: embedding.cpp  embedding.h  embedding.metal
ThunderMittens/kernels/gdn/: gdn.cpp  gdn.h  gdn.metal
ThunderMittens/kernels/gelu/: gelu.cpp  gelu.h  gelu.metal
ThunderMittens/kernels/glu/: glu.metal
ThunderMittens/kernels/hadamard/: hadamard.metal
ThunderMittens/kernels/hedgehog/: hedgehog.cpp  hedgehog.h
ThunderMittens/kernels/indexer/: indexer.cpp  indexer.h  indexer.metal
ThunderMittens/kernels/kv_cache/: kv_cache.cpp  kv_cache.h  kv_cache.metal
ThunderMittens/kernels/layernorm/: layernorm.cpp  layernorm.h  layernorm.metal
ThunderMittens/kernels/lin_attn_causal/: lin_attn_causal.cpp  lin_attn_causal.h  lin_attn_causal.metal
ThunderMittens/kernels/lin_attn_decay/: lin_attn_decay.cpp  lin_attn_decay.h  lin_attn_decay.metal
ThunderMittens/kernels/lm_head/: lm_head.cpp  lm_head.h  lm_head.metal
ThunderMittens/kernels/mamba2/: mamba2.cpp  mamba2.h  mamba2.metal
ThunderMittens/kernels/marginal/: marginal.cpp
ThunderMittens/kernels/matmul_custom/: matmul_custom.cpp
ThunderMittens/kernels/minference/: minference.cpp  minference.h  minference.metal
ThunderMittens/kernels/mla/: mla.cpp  mla.h  mla.metal
ThunderMittens/kernels/moe/: moe.cpp  moe.h  moe.metal
ThunderMittens/kernels/optim/: adamw.h  adamw.metal
ThunderMittens/kernels/paged_attn_v2/: paged_attn_v2.cpp  paged_attn_v2.h  paged_attn_v2.metal
ThunderMittens/kernels/qflux/: qflux.cpp  qflux.h  qflux.metal
ThunderMittens/kernels/qgemm/: qgemm.cpp  qgemm.h  qgemm.metal
ThunderMittens/kernels/qgemm_int/: qgemm_int.cpp
ThunderMittens/kernels/qgemv/: qgemv.cpp  qgemv.h  qgemv.metal
ThunderMittens/kernels/quant_rt/: quant_rt.h  quant_rt.metal
ThunderMittens/kernels/rms_norm/: rms_norm.cpp  rms_norm.h  rms_norm.metal
ThunderMittens/kernels/rope_kv/: rope_kv.cpp  rope_kv.metal
ThunderMittens/kernels/rotary/: rotary.metal
ThunderMittens/kernels/sampling/: sampling.cpp  sampling.h  sampling.metal  transforms.h
ThunderMittens/kernels/selective_scan/: selective_scan.cpp  selective_scan.h  selective_scan.metal
ThunderMittens/kernels/tests_parity/: test_parity.py
ThunderMittens/kernels/tk/: __init__.py  autograd.py  quant.py
ThunderMittens/kernels/tk_torch/: __init__.py  pyproject.toml  torch_kernels.mm
ThunderMittens/kernels/tk_torch/tests/: test_mps.py
ThunderMittens/kernels/turboquant/: turboquant.h  turboquant.metal
bindings/python/: CMakeLists.txt  bindings.cpp  pyproject.toml  requirements.txt  setup.cfg  setup.py
bindings/python/tk/: __init__.py  base_q.py  quant.py
bindings/python/tk/tests/: test_autograd.py
bindings/pytorch_mps/: pyproject.toml
bindings/pytorch_mps/tests/: test_base_q_mps.py  test_kernel_extensions.py  test_mps.py
bindings/pytorch_mps/tk_torch/: __init__.py  torch_kernels.mm
docs/: backend-notes.md  development.md  kernel-roadmap.md  performance.md  repository-structure.md
docs/porting/: marlin-quant.md  primitives.md  thunderkittens.md
include/metal/common/: atomics.metal  base_ops.metal  common.metal  glu_eval.metal
include/metal/ops/: ops.metal
include/quixicore/metal/: backend.hpp  ops.hpp  runtime.hpp
kernels/activations/glu/: glu.cpp  glu.h  glu.metal
kernels/attention/attn_bwd/: attn_bwd.cpp
kernels/attention/attn_causal/: attn_causal.cpp  attn_causal.h
kernels/attention/attn_decode/: attn_decode.cpp  attn_decode.h  attn_decode.metal
kernels/attention/attn_fwd/: attn_fwd.h  attn_fwd.metal
kernels/attention/attn_fwd_sg/: attn_fwd_sg.cpp  attn_fwd_sg.h  attn_fwd_sg.metal
kernels/attention/attn_q/: attn_q.cpp  attn_q.metal
kernels/attention/attn_varlen/: attn_varlen.cpp
kernels/attention/cross_attn/: cross_attn.cpp  cross_attn.h  cross_attn.metal
kernels/attention/paged_attn_v2/: paged_attn_v2.metal
kernels/attention/rotary/: rotary.cpp  rotary.h  rotary.metal
kernels/attention/swin_attn/: swin_attn.cpp  swin_attn.h  swin_attn.metal
kernels/audio/conv1d/: conv1d.cpp  conv1d.h  conv1d.metal
kernels/audio/relative_attention/: relative_attention.cpp  relative_attention.h  relative_attention.metal
kernels/common/: base_q_descriptor.h  tk_launch.h
kernels/linear_attention/gdn/: gdn.cpp  gdn.h  gdn.metal
kernels/linear_attention/hedgehog/: hedgehog.metal
kernels/linear_attention/lin_attn_decay/: lin_attn_decay.cpp
kernels/matmul/flux/: flux.cpp  flux.h  (+1 more)
perf/: README.md  baseline_status.md  bench_kernels.py  optimization_status.md  perf.md
perf/harness/: time_perf.py
perf/results/: .gitignore
scripts/: build  clean  configure  coverage-report  test
tests/: README.md
(+254 files in other folders)
